# Movyra-Delivery

./: LICENSE  README.md
movyra-android/: android.keystore  app-release-bundle.aab  app-release-signed.apk  app-release-signed.apk.idsig  app-release-unsigned-aligned.apk  manifest-checksum.txt  twa-manifest.json
movyra-android/app/: build.gradle
movyra-android/app/src/main/: AndroidManifest.xml
movyra-android/app/src/main/java/com/bongo/movyra/: Application.java  DelegationService.java  LauncherActivity.java
movyra-android/app/src/main/res/raw/: web_app_manifest.json
movyra-android/app/src/main/res/values/: strings.xml
mv-backend/: .env  Cargo.toml  package-lock.json
mv-backend/migrations/: 20260327133416_init_schema.sql
mv-backend/src/: main.rs
mv-backend/src/handlers/: auth_handler.rs  booking_handler.rs  mod.rs  user_handler.rs
mv-backend/src/middleware/: auth_guard.rs  mod.rs
mv-backend/src/models/: booking.rs  mod.rs  user.rs
mv-backend/src/ws/: tracking.rs
mv-client/: .env.production  .firebaserc  .gitignore  README.md  bubblewrap.json  capacitor.config.json  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  r.py  tailwind.config.js  twa-manifest.json  vite.config.js
mv-client/.firebase/: hosting.ZGlzdA.cache
mv-client/android/: gradle.properties  local.properties
mv-client/android/app/: build.gradle
mv-client/android/app/src/main/java/com/movyra/customerapp/: MainActivity.java
mv-client/android/app/src/main/res/values/: strings.xml
mv-client/public/: manifest.json  version.json
mv-client/public/.well-known/: assetlinks.json
mv-client/skills/: firebase-local-env-setup
mv-client/src/: App.jsx  index.css  main.jsx
mv-client/src/assets/: Icons.jsx
mv-client/src/assets/icons/: CustomTruckIcon.jsx  StatusIcons.jsx
mv-client/src/assets/logo/: MovyraLogo.jsx
mv-client/src/components/: BottomNavMobile.jsx  MapLibreWrapper.jsx  MobileAppLayout.jsx  PublicHeader.jsx
mv-client/src/components/Booking/: AddressInputSheet.jsx  ConfirmButton.jsx  VehicleCard.jsx
mv-client/src/components/Charts/: DiagonalHatchChart.jsx
mv-client/src/components/Dashboard/: ActiveShippingCard.jsx  RecentShippingList.jsx  ShippingListItem.jsx  TrackingSearch.jsx  UserHeader.jsx
mv-client/src/components/History/: ShipmentCard.jsx  ShipmentTabs.jsx
mv-client/src/components/Icons/: LineIconRegistry.jsx
mv-client/src/components/Map/: DarkTooltipOverlay.jsx  DraggableWaypointList.jsx  FloatingLocationCard.jsx  LocationCard.jsx  LocationInputCards.jsx  MapActionFAB.jsx  MapLibreWrapper.jsx  MintRouteLayer.jsx  PinContactBottomSheet.jsx  RouteOptimizerModal.jsx  TimelineInputList.jsx
mv-client/src/components/Navigation/: BottomNavBar.jsx
mv-client/src/components/Onboarding/: OnboardingFlow.jsx  PromoSlides.jsx  Slide1.jsx  Slide2.jsx  Slide3.jsx  Slide4.jsx  Slide5.jsx  SlideItems.jsx  SlideLocation.jsx  SlideNetwork.jsx  SlideOTP.jsx  SlideRealPricing.jsx  SlideShipments.jsx  SlideSystemPermissions.jsx  SlideWarehouse.jsx
mv-client/src/components/OrderDetails/: OrderAnalyticsChart.jsx  OrderFloatingStatusCard.jsx  OrderInfoListCard.jsx  OrderSegmentedToggle.jsx
mv-client/src/components/Profile/: PremiumCard.jsx
mv-client/src/components/Tracking/: DriverBottomCard.jsx  TelemetryHud.jsx  TrackingHeader.jsx  TrackingInput.jsx  TrackingTimelineItem.jsx
mv-client/src/components/UI/: MovyraButton.jsx  NetworkStatus.jsx  SystemButton.jsx  SystemCard.jsx  SystemToggle.jsx
mv-client/src/context/: BookingContext.jsx
mv-client/src/hooks/: useGeolocation.js  useLocalStorage.js
mv-client/src/pages/: LandingPage.jsx  auth-login.jsx  auth-signup.jsx  dashboard-home.jsx  location-picker.jsx  order-confirm.jsx  order-history.jsx  parcel-type.jsx  profile-settings.jsx  tracking-active.jsx  vehicle-selection.jsx
mv-client/src/pages/Auth/: MobileLogin.jsx  MobileSignup.jsx  OTPVerification.jsx  SetPassword.jsx
mv-client/src/pages/Booking/: BookingDetails.jsx  PriceSelection.jsx  ReviewOrder.jsx  SearchingDriver.jsx  SelectVehicle.jsx  SetLocation.jsx  VehicleCard.jsx
mv-client/src/pages/Dashboard/: ActiveShippingCard.jsx  BottomNavBar.jsx  MobileHome.jsx  RecentShippingList.jsx  ShippingListItem.jsx  TrackingSearch.jsx  UserHeader.jsx
mv-client/src/pages/OrderHistory/: OrderDetails.jsx  OrderHistory.jsx
mv-client/src/pages/Profile/: SavedAddresses.jsx  Wallet.jsx
mv-client/src/pages/Support/: HelpCenter.jsx
mv-client/src/pages/Tracking/: DeliveryComplete.jsx  LiveTracking.jsx  Rating.jsx  ShipmentDetail.jsx
mv-client/src/services/: analytics.js  api.js  apiClient.js  emailAuth.js  firebaseAuth.js  firestore.js  geoService.js  geocodeCache.js  googleMaps.js  mapLayers.js  mapPlugins.js  osrmPricing.js  payment.js  routeOptimizer.js  voiceRecognition.js  what3words.js
mv-client/src/store/: useAppStore.js  useAuthStore.js  useBookingStore.js  useGeolocation.js  useLocalStorage.js  useLocationStore.js  useMapSettingsStore.js  useOnboardingStore.js
