[package]
name = "mv-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
dotenvy = "0.15.7"

# Required for Upstash Redis TLS (rediss://) and WebSocket streaming
# Features: tokio-comp for async, tokio-native-tls-comp for secure Upstash connection
redis = { version = "0.27.6", features = ["tokio-comp", "tokio-native-tls-comp"] }
futures-util = "0.3.31"