[package]
name = "mv-backend"
version = "0.1.0"
edition = "2024"
authors = ["Movyra Engineering"]
description = "Core Logistics & Routing API for Movyra Delivery"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
# Cryptographic JWT Decoding & Public Key Fetching (Firebase Auth)
jsonwebtoken = "9.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }

# UPDATED: Tower HTTP now includes trace, catch-panic, and limit for robust middleware
tower-http = { version = "0.6.8", features = ["cors", "trace", "catch-panic", "limit"] }

# NEW: Structured Telemetry & Logging Engine
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

dotenvy = "0.15.7"

# Required for Upstash Redis TLS (rediss://) and WebSocket streaming
# Features: tokio-comp for async, tokio-native-tls-comp for secure Upstash connection
redis = { version = "0.27.6", features = ["tokio-comp", "tokio-native-tls-comp"] }
futures-util = "0.3.31"

# ============================================================================
# NEW SECTION 1: Production Release Optimizations (For Render.com)
# ============================================================================
[profile.release]
opt-level = 3          # Maximum optimization for execution speed
lto = "fat"            # Fat Link Time Optimization for peak performance across crates
codegen-units = 1      # Slower compile time, but significantly faster binary
panic = "abort"        # Abort on panic to save binary size (no stack unwinding)
strip = "debuginfo"    # Strip debug symbols to reduce memory footprint on Render

# ============================================================================
# NEW SECTION 2: Development Profile (Fast Iteration)
# ============================================================================
[profile.dev]
opt-level = 0          # Zero optimization for instantaneous local compilation
debug = true           # Full debug symbols for tracking Firebase JWT failures
split-debuginfo = "unpacked" # Faster linking on macOS/Linux environments

# ============================================================================
# NEW SECTION 3: Feature Flags Engine
# ============================================================================
[features]
default = []
# Allows toggling strict Firebase validation off during local unit testing
disable-auth-checks = []

# ============================================================================
# NEW SECTION 4: Strict Global Linter Engine (Security & Concurrency)
# ============================================================================
[lints.clippy]
unwrap_used = "warn"        # Prevent production crashes from unchecked Firebase token unwraps
expect_used = "warn"        # Enforce proper Axum Error handling returning HTTP 401/500
await_holding_lock = "deny" # Prevent deadlocks when accessing PostgreSQL connections

# ============================================================================
# NEW SECTION 5: Explicit Binary Target Engine
# Strictly defines the entry point for the Axum server to prevent compilation ambiguity.
# ============================================================================
[[bin]]
name = "mv-backend"
path = "src/main.rs"

# ============================================================================
# NEW SECTION 6: Dependency Optimization Engine
# Forces all downloaded third-party crates to compile at maximum speed,
# even during local development, saving CPU cycles on cold starts.
# ============================================================================
[profile.dev.package."*"]
opt-level = 3

# ============================================================================
# NEW SECTION 7: Automated Testing Profile Engine
# Optimizes the test runner for CI/CD pipelines (like GitHub Actions).
# ============================================================================
[profile.test]
opt-level = 1
debug = true
lto = "off"

# ============================================================================
# NEW SECTION 8: Core Rust Compiler Linter Engine
# Enforces strict code hygiene at the compiler level before Clippy even runs.
# ============================================================================
[lints.rust]
unsafe_code = "forbid"      # Strictly forbid memory-unsafe code in the backend
unused_must_use = "deny"    # Force developers to handle database Result types
rust_2018_idioms = "deny"   # Enforce modern Rust idioms
